[package]
name = "dbgp"
version = "0.0.1"
license-file = "LICENSE"
authors = ["Afonso Bordado <afonsobordado@az8.co>"]
readme = "README"
build = "build.rs"

[dependencies]
xml-rs = "0.4.1"
base64 = "0.4.1"

[build-dependencies]
rusty-cheddar = "0.3.0"

[lib]
name = "dbgp"
crate-type = ["rlib", "cdylib"]
