[package]
name = "dbgp"
version = "0.0.1"
license-file = "LICENSE"
authors = ["Afonso Bordado <afonsobordado@az8.co>"]
readme = "README"
build = "build.rs"

[dependencies]
url = "1.4.0"
xml-rs = "0.4.1"
base64 = "0.4.1"

[build-dependencies]
rusty-cheddar = { git = "https://github.com/mozilla/moz-cheddar.git" }

[lib]
name = "dbgp"
crate-type = ["rlib", "staticlib", "cdylib"]
