[package]
authors = ["Afonso Bordado <afonsobordado@az8.co>"]
license-file = "../LICENSE"
name = "dbgp"
readme = "../README"
version = "0.0.1"

[dependencies]
base64 = "0.4.1"
bytes = "0.4.1"
futures = "0.1.12"
lazy_static = "0.2.6"
tokio-io = "0.1.1"
tokio-proto = "0.1.1"
tokio-service = "0.1.0"
url = "1.4.0"
xml-rs = "0.4.1"

[lib]
crate-type = ["rlib", "dylib"]
name = "dbgp"
