[package]
authors = ["Afonso Bordado <afonsobordado@az8.co>"]
license-file = "LICENSE"
name = "dbgp"
readme = "README.md"
version = "0.0.1"
repository = "https://github.com/afonso360/dbgp"
documentation = "https://docs.rs/dbgp/0.0.1/dbgp"
homepage = "https://github.com/afonso360/dbgp"
description = """
Name reserved for WIP crate
"""
categories = ["development-tools::debugging"]

include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]


[dependencies]
base64 = "0.4.1"
bytes = "0.4.1"
futures = "0.1.12"
lazy_static = "0.2.6"
tokio-io = "0.1.1"
tokio-proto = "0.1.1"
tokio-service = "0.1.0"
url = "1.4.0"
xml-rs = "0.4.1"

[lib]
crate-type = ["rlib", "dylib"]
name = "dbgp"
