[package]
authors = ["Afonso Bordado <afonsobordado@az8.co>"]
license-file = "LICENSE"
name = "dbgp"
readme = "README.md"
version = "0.0.1"
repository = "https://github.com/afonso360/dbgp"
documentation = "https://docs.rs/dbgp/0.0.1/dbgp"
homepage = "https://github.com/afonso360/dbgp"
description = """
Name reserved for WIP crate

This crate is licensed under the GPL v2 with a Linking Exception
See LICENSE for details
"""
categories = ["development-tools::debugging"]
keywords = ["dbgp", "dbgp-server", "dbgp-client", "c-api"]

include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]


[dependencies]
base64 = "0.9"
bytes = "0.4"

url = "1.6"
url_serde = "0.2"

serde = "1.0"
serde_derive = "1.0"
serde-xml-rs = "0.2"

error-chain = "0.11"

[lib]
crate-type = ["rlib", "dylib"]
name = "dbgp"
