[package]
name = "dbgp_capi"
version = "0.0.1"
authors = ["Afonso Bordado <afonsobordado@az8.co>"]
license-file = "LICENSE"
readme = "README.md"

publish = false
repository = "https://github.com/afonso360/dbgp"

build = "build.rs"

[dependencies]
dbgp = { version = "0.0.1", path = "../dbgp" }

[build-dependencies]
moz-cheddar = { git = "https://github.com/mozilla/moz-cheddar.git" }

[lib]
name = "dbgp"
crate-type = ["staticlib", "cdylib"]
